antlr4_vala_deps = [
  'glib-2.0',
  'gobject-2.0',
  'gee-0.8',
  'gio-2.0',
]

deps = []
foreach d : antlr4_vala_deps
  deps += dependency(d)
endforeach

antlr4_vala_sources = [
  # Antlr4.Runtime.Atn
  'Antlr4.Runtime/Atn/abstractpredicatetransition.vala',
  'Antlr4.Runtime/Atn/actiontransition.vala
  'Antlr4.Runtime/Atn/actiontransition.vala',
  'Antlr4.Runtime/Atn/ambiguityinfo.vala',
  'Antlr4.Runtime/Atn/arraypredictioncontext.vala',
  'Antlr4.Runtime/Atn/atnconfigset.vala',
  'Antlr4.Runtime/Atn/atnconfig.vala',
  'Antlr4.Runtime/Atn/atndeserializationoptions.vala',
  'Antlr4.Runtime/Atn/atndeserializer.vala',
  'Antlr4.Runtime/Atn/atnserializer.vala',
  'Antlr4.Runtime/Atn/atnsimulator.vala',
  'Antlr4.Runtime/Atn/atnstate.vala',
  'Antlr4.Runtime/Atn/atntype.vala',
  'Antlr4.Runtime/Atn/atn.vala',
  'Antlr4.Runtime/Atn/atomtransition.vala
  'Antlr4.Runtime/Atn/atomtransition.vala',
  'Antlr4.Runtime/Atn/basicblockstartstate.vala',
  'Antlr4.Runtime/Atn/basicstate.vala',
  'Antlr4.Runtime/Atn/blockendstate.vala',
  'Antlr4.Runtime/Atn/blockstartstate.vala',
  'Antlr4.Runtime/Atn/codepointtransitions.vala',
  'Antlr4.Runtime/Atn/contextsensitivityinfo.vala',
  'Antlr4.Runtime/Atn/decisioneventinfo.vala',
  'Antlr4.Runtime/Atn/decisioninfo.vala',
  'Antlr4.Runtime/Atn/decisionstate.vala',
  'Antlr4.Runtime/Atn/emptypredictioncontext.vala',
  'Antlr4.Runtime/Atn/epsilontransition.vala',
  'Antlr4.Runtime/Atn/errorinfo.vala',
  'Antlr4.Runtime/Atn/lexeractionexecutor.vala',
  'Antlr4.Runtime/Atn/lexeractiontype.vala',
  'Antlr4.Runtime/Atn/lexeraction.vala',
  'Antlr4.Runtime/Atn/lexeratnconfig.vala',
  'Antlr4.Runtime/Atn/lexeratnsimulator.vala',
  'Antlr4.Runtime/Atn/lexerchannelaction.vala',
  'Antlr4.Runtime/Atn/lexercustomaction.vala',
  'Antlr4.Runtime/Atn/lexerindexedcustomaction.vala',
  'Antlr4.Runtime/Atn/lexermodeaction.vala',
  'Antlr4.Runtime/Atn/lexermoreaction.vala',
  'Antlr4.Runtime/Atn/lexerpopmodeaction.vala',
  'Antlr4.Runtime/Atn/lexerpushmodeaction.vala',
  'Antlr4.Runtime/Atn/lexerskipaction.vala',
  'Antlr4.Runtime/Atn/lexertypeaction.vala',
  'Antlr4.Runtime/Atn/lloneanalyzer.vala',
  'Antlr4.Runtime/Atn/lookaheadeventinfo.vala',
  'Antlr4.Runtime/Atn/loopendstate.vala',
  'Antlr4.Runtime/Atn/notsettransition.vala',
  'Antlr4.Runtime/Atn/orderedatnconfigset.vala',
  'Antlr4.Runtime/Atn/parseinfo.vala',
  'Antlr4.Runtime/Atn/parseratnsimulator.vala',
  'Antlr4.Runtime/Atn/plusblockstartstate.vala',
  'Antlr4.Runtime/Atn/plusloopbackstate.vala',
  'Antlr4.Runtime/Atn/precedencepredicatetransition.vala',
  'Antlr4.Runtime/Atn/predicateevalinfo.vala',
  'Antlr4.Runtime/Atn/predicatetransition.vala',
  'Antlr4.Runtime/Atn/predictioncontextcache.vala',
  'Antlr4.Runtime/Atn/predictioncontext.vala',
  'Antlr4.Runtime/Atn/predictionmode.vala',
  'Antlr4.Runtime/Atn/profilingatnsimulator.vala',
  'Antlr4.Runtime/Atn/rangetransition.vala',
  'Antlr4.Runtime/Atn/rulestartstate.vala',
  'Antlr4.Runtime/Atn/rulestopstate.vala',
  'Antlr4.Runtime/Atn/ruletransition.vala',
  'Antlr4.Runtime/Atn/semanticcontext.vala',
  'Antlr4.Runtime/Atn/settransition.vala',
  'Antlr4.Runtime/Atn/singletonpredictioncontext.vala',
  'Antlr4.Runtime/Atn/starblockstartstate.vala',
  'Antlr4.Runtime/Atn/starloopbackstate.vala',
  'Antlr4.Runtime/Atn/starloopentrystate.vala',
  'Antlr4.Runtime/Atn/tokensstartstate.vala',
  'Antlr4.Runtime/Atn/transition.vala',
  'Antlr4.Runtime/Atn/wildcardtransition.vala',
  # Antlr4.Runtime.Dfa
  'Antlr4.Runtime/Dfa/dfa.vala',
  'Antlr4.Runtime/Dfa/dfastate.vala',
  'Antlr4.Runtime/Dfa/dfaserializer.vala',
  'Antlr4.Runtime/Dfa/lexerdfaserializer.vala',
  # Antlr4.Runtime.Misc
  'Antlr4.Runtime/Misc/orderedhashset.vala',
  'Antlr4.Runtime/Misc/equalitycomparator.vala',
  'Antlr4.Runtime/Misc/objectequalitycomparator.vala',
  'Antlr4.Runtime/Misc/abstractequalitycomparator.vala',
  'Antlr4.Runtime/Misc/multimap.vala',
  'Antlr4.Runtime/Misc/pair.vala',
  'Antlr4.Runtime/Misc/triple.vala',
  'Antlr4.Runtime/Misc/murmurhash.vala',
  'Antlr4.Runtime/Misc/doublekeymap.vala',
  'Antlr4.Runtime/Misc/flexiblehashmap.vala',
  'Antlr4.Runtime/Misc/integerlist.vala',
  'Antlr4.Runtime/Misc/integerstack.vala',
  'Antlr4.Runtime/Misc/interval.vala',
  'Antlr4.Runtime/Misc/logmanager.vala',
  'Antlr4.Runtime/Misc/intset.vala',
  'Antlr4.Runtime/Misc/intervalset.vala',
  'Antlr4.Runtime/Misc/bitset.vala',
  'Antlr4.Runtime/Misc/util.vala',
  'Antlr4.Runtime/Misc/predicate.vala',
  'Antlr4.Runtime/Misc/interpreterdatareader.vala',
  # Antlr4.Runtime.Error
  'Antlr4.Runtime/Error/indexerror.vala',
  'Antlr4.Runtime/Error/parsecancellationerror.vala',
  'Antlr4.Runtime/Error/stateerror.vala',
  'Antlr4.Runtime/Error/outofmemoryerror.vala',
  'Antlr4.Runtime/Error/runtimeerror.vala',
  'Antlr4.Runtime/Error/baseerror.vala',
  'Antlr4.Runtime/Error/recognitionerror.vala',
  # Antlr4.Runtime.Tree
  'Antlr4.Runtime/Tree/basetree.vala',
  'Antlr4.Runtime/Tree/parsetree.vala',
  'Antlr4.Runtime/Tree/syntaxtree.vala',
  'Antlr4.Runtime/Tree/rulenode.vala',
  # Antlr4.Runtime
  'Antlr4.Runtime/antlrobject.vala',
  'Antlr4.Runtime/hashable.vala',
  'Antlr4.Runtime/vocabulary.vala',
  'Antlr4.Runtime/vocabularyimpl.vala',
  'Antlr4.Runtime/token.vala',
  'Antlr4.Runtime/intstream.vala',
  'Antlr4.Runtime/charstream.vala',
  'Antlr4.Runtime/tokensource.vala',
  'Antlr4.Runtime/tokenfactory.vala',
  'Antlr4.Runtime/rulecontext.vala',
  'Antlr4.Runtime/parserrulecontext.vala',
  'Antlr4.Runtime/recognizer.vala',
  'Antlr4.Runtime/antlrerrorlistener.vala',
  'Antlr4.Runtime/baseerrorlistener.vala',
  'Antlr4.Runtime/consoleerrorlistener.vala',
]

message('detected ' + antrl4_vala_sources.length() + ' source files')
pkgc = import('pkgconfig')

lib = shared_library(
  'antlr4vala',
  antrl4_vala_sources,
  vala_vapi : 'antlr-4.8.vapi',
  vala_args : ['--target-glib=2.52'],
  dependencies: deps,
  install : true,
)

executable(
  'log-test',
  'Antlr4.Runtime/Misc/logmanager.vala',
  dependencies : deps,
)

pkgc.generate(
  lib,
  version : '4.8',
  name : 'libantlr4vala',
  filebase : 'antlr-4.8',
  description : 'ANTLR 4.8 runtime for Vala.',
)
